added tests for axis config

--- a/test/simplot_tests.html
+++ b/test/simplot_tests.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Running Unit Tests for simplot Library</title>
+    <title>Unit Tests for Simplot Library</title>
   </head>
   <body>
     <script type="text/javascript" src="packages/unittest/test_controller.js"></script>
